@@ -54,18 +54,23 @@ committers_unable_to_review = [
     Committer("Antonio Gomes", "tonikitoo@webkit.org"),
     Committer("Ben Murdoch", "benm@google.com"),
     Committer("Brent Fulgham", "bfulgham@webkit.org"),
+    Committer("Brett Wilson", "brettw@chromium.org"),
     Committer("Brian Weinstein", "bweinstein@apple.com"),
     Committer("Cameron McCormack", "cam@webkit.org"),
     Committer("Chris Fleizach", "cfleizach@apple.com"),
+    Committer("Chris Marrin", "cmarrin@apple.com"),
     Committer("Collin Jackson", "collinj@webkit.org"),
     Committer("Csaba Osztrogonac", "ossy@webkit.org"),
     Committer("Daniel Bates", "dbates@webkit.org"),
+    Committer("Dean Jackson", "dino@apple.com"),
     Committer("Dirk Schulze", "krit@webkit.org"),
     Committer("Dmitry Titov", "dimich@chromium.org"),
     Committer("Drew Wilson", "atwilson@chromium.org"),
     Committer("Dumitru Daniliuc", "dumi@chromium.org"),
     Committer("Eli Fidler", "eli@staikos.net"),
+    Committer("Enrica Casucci", "enrica@apple.com"),
     Committer("Eric Roman", "eroman@chromium.org"),
+    Committer("Feng Qian", "feng@chromium.org"),
     Committer("Fumitoshi Ukai", "ukai@chromium.org"),
     Committer("Greg Bolsinga", "bolsinga@apple.com"),
     Committer("Jeremy Moskovich", "playmobil@google.com"),
@@ -75,16 +80,19 @@ committers_unable_to_review = [
     Committer("John Abd-El-Malek", "jam@chromium.org"),
     Committer("Joseph Pecoraro", "joepeck@webkit.org"),
     Committer("Julie Parent", "jparent@google.com"),
+    Committer("Jungshik Shin", "jshin@chromium.org"),
     Committer("Kenneth Rohde Christiansen", "kenneth@webkit.org"),
     Committer("Kent Tamura", "tkent@chromium.org"),
     Committer("Laszlo Gombos", "laszlo.1.gombos@nokia.com"),
     Committer("Mads Ager", "ager@chromium.org"),
+    Committer("Matt Perry", "mpcomplete@chromium.org"),
     Committer("Mike Belshe", "mike@belshe.com"),
     Committer("Nate Chapin", "japhet@chromium.org"),
     Committer("Ojan Vafai", "ojan@chromium.org"),
     Committer("Pam Greene", "pam@chromium.org"),
     Committer("Peter Kasting", "pkasting@google.com"),
     Committer("Pierre d'Herbemont", "pdherbemont@free.fr"),
+    Committer("Pierre-Olivier Latour", "pol@apple.com"),
     Committer("Roland Steiner", "rolandsteiner@chromium.org"),
     Committer("Ryosuke Niwa", "rniwa@webkit.org"),
     Committer("Scott Violet", "sky@chromium.org"),
@@ -92,6 +100,7 @@ committers_unable_to_review = [
     Committer("Stephen White", "senorblanco@chromium.org"),
     Committer("Steve Block", "steveblock@google.com"),
     Committer("Tony Chang", "tony@chromium.org"),
+    Committer("William Siegrist", "wsiegrist@apple.com"),
     Committer("Yael Aharon", "yael.aharon@nokia.com"),
     Committer("Yong Li", "yong.li@torchmobile.com"),
     Committer("Yury Semikhatsky", "yurys@chromium.org"),
@@ -112,8 +121,10 @@ reviewers_list = [
     Reviewer("Anders Carlsson", "andersca@apple.com"),
     Reviewer("Antti Koivisto", "koivisto@iki.fi"),
     Reviewer("Ariya Hidayat", "ariya.hidayat@trolltech.com"),
+    Reviewer("Beth Dakin", "bdakin@apple.com"),
     Reviewer("Brady Eidson", "beidson@apple.com"),
     Reviewer("Cameron Zwarich", "zwarich@apple.com"),
+    Reviewer("Chris Blumenberg", "cblu@apple.com"),
     Reviewer("Dan Bernstein", "mitz@webkit.org"),
     Reviewer("Darin Adler", "darin@apple.com"),
     Reviewer("Darin Fisher", "fishd@chromium.org"),
@@ -135,6 +146,7 @@ reviewers_list = [
     Reviewer("John Sullivan", "sullivan@apple.com"),
     Reviewer("Jon Honeycutt", "jhoneycutt@apple.com"),
     Reviewer("Justin Garcia", "justin.garcia@apple.com"),
+    Reviewer("Ken Kocienda", "kocienda@apple.com"),
     Reviewer("Kevin Decker", "kdecker@apple.com"),
     Reviewer("Kevin McCullough", "kmccullough@apple.com"),
     Reviewer("Kevin Ollivier", "kevino@theolliviers.com"),
@@ -144,6 +156,7 @@ reviewers_list = [
     Reviewer("Nikolas Zimmermann", "zimmermann@kde.org"),
     Reviewer("Oliver Hunt", "oliver@apple.com"),
     Reviewer("Pavel Feldman", "pfeldman@chromium.org"),
+    Reviewer("Richard Williamson", "rjw@apple.com"),
     Reviewer("Rob Buis", "rwlbuis@gmail.com"),
     Reviewer("Sam Weinig", "sam@webkit.org"),
     Reviewer("Simon Fraser", "simon.fraser@apple.com"),
@@ -152,7 +165,9 @@ reviewers_list = [
     Reviewer("Steve Falkenburg", "sfalken@apple.com"),
     Reviewer("Timothy Hatcher", "timothy@hatcher.name"),
     Reviewer(u'Tor Arne Vestb\xf8', "vestbo@webkit.org"),
+    Reviewer("Vicki Murley", "vicki@apple.com"),
     Reviewer("Xan Lopez", "xan.lopez@gmail.com"),
+    Reviewer("Zack Rusin", "zack@kde.org"),
 ]
 
 
